# industrial_iot_agents

./: AGENTS.md  README.md
agents/: operational_intelligence_agent.py  predictive_maintenance_agent.py  process_control_agent.py
config/: .gitkeep
docs/: .gitkeep
industrial_dra_system/: README.md  pyproject.toml
industrial_dra_system/a2a_integration/: agent_communication.py  message_routing.py
industrial_dra_system/agents/: operational_intelligence_agent.py  predictive_maintenance_agent.py  process_control_agent.py
industrial_dra_system/google_ai/: document_processing.py  knowledge_base.py  rag_engine.py
industrial_dra_system/iot_integration/: data_validation.py  real_time_processing.py  sensor_data_ingestion.py
industrial_dra_system/monitoring/: alerting.py  logging.py
src/core/: __init__.py  energy_calculation.py  time_spine.py
src/gcp_integration/: __init__.py  optimization.py
src/models/: __init__.py  digital_twin_models.py
src/utils/: __init__.py
tests/: test_models.py
