[tool.poetry]
name = "industrial-dra-system"
version = "0.1.0"
description = "A Python-based industrial monitoring system for a Drag Reducing Agent (DRA) injection skid."
authors = ["Your Name <you@example.com>"]  # Placeholder, can be updated later
readme = "README.md"
packages = [{include = "industrial_dra_system"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-ai-generativelanguage = "^0.7.0" # For Vertex AI SDK
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
google-cloud-pubsub = "^2.18.0"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.11.0"
google-cloud-logging = "^3.7.0"
google-cloud-monitoring = "^2.16.0"
paho-mqtt = "^1.6.1"
pymodbus = "^3.5.2" # Check for latest compatible version
opcua = "^0.98.13" # Check for latest compatible version, also 'asyncua' is more common for modern Python

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
